# dovs12

./: .gitignore  .gitignore.icloud  README.md  ast.ml  cfgBuilder.ml  cfgBuilder.mli  codegen.ml  codegentest.ml  dolphin.opam  dune  dune-project  env.ml  errors.ml  example  input.txt  input1.txt  lexer.mll  location.ml  main.ml  makefile  negtest1.dlp  negtest2.dlp  parser.ml  parser.mly  parserrun.ml  pretty.ml  runTimeBindings.ml  semant.ml  semantextracode.ml  semanttest.ml  typedAst.ml  typedPretty.ml
_build/: .db  .digest-db  log
_build/default/: ast.ml  env.ml  pretty.ml  semant.ml  typedPretty.ml
llvm_outputs/: .test11.ll.icloud  .test16.ll.icloud  .test17.ll.icloud  .test2.ll.icloud  .test7.ll.icloud  .test8.ll.icloud  .test9.ll.icloud  forloop.ll  funccall2.ll  multiplevardecl.ll  multiplevardeclwithdup.ll  nestedwhilebreakprog.ll  output  output.ll  output1  output2  scoping1.ll  shortcircuit2.ll  simple program.ll  test  test1.ll  test11.ll  test16.ll  test17.ll  test2.ll  test3.ll  test4.ll  test5.ll  test6.ll  test7.ll  test8.ll  test9.ll  testreadint.ll  vardeclandassignment.ll  vardeclprog.ll
oldFiles/: codegentest.ml  oldfuncscodegen  parserrun.ml  semanttest.ml
tests/: input1.txt
tests/example_dolphin_programs/: fact_it.dlp  fact_rec.dlp  fact_rec.out  fib_lambda.dlp  fib_lambda.out  mandelbrot.dlp  mandelbrot.out  matrix.dlp  merge_sort.dlp  pascal.dlp  pascal.out  power_it.dlp  power_rec.dlp  power_rec.out  queens.dlp  queens.out  quick_sort.dlp  quick_sort.out  sudoku.dlp  sudoku.out
tests/neg tests/: negtest1.dlp  negtest4.dlp  negtest6.dlp  negtest7.dlp  negtest9.dlp
tests/negTests/: negtest1.dlp  negtest10.dlp  negtest2.dlp  negtest3.dlp  negtest4.dlp  negtest5.dlp  negtest6.dlp  negtest7.dlp  negtest8.dlp  negtest9.dlp
tests/oldTests/: OT1.dlp  OT10.dlp  OT11.dlp  OT12.dlp  OT13.dlp  OT14.dlp  OT15.dlp  OT16.dlp  OT17.dlp  OT18.dlp  OT19.dlp  (+12 more)
(+88 files in other folders)
