(executable
 (name semanttest)
 (modules semanttest semant ast typedAst symbol env errors typedPretty pretty runTimeBindings runTimeBindings)
 (libraries printbox)
 (flags (:standard -w -37)))

(executable
(name codegentest)
(modules codegentest codegen semant ast typedAst symbol env errors typedPretty pretty runTimeBindings cfgBuilder ll)
 (libraries printbox)
 (flags (:standard -w -37)))

(env
 (dev
  (flags (:standard -warn-error -A))))
